@@ -10,6 +10,7 @@ git-annex (5.20150931) UNRELEASED; urgency=medium
   * reinject: Already verified content; this can now be disabled by
     setting annex.verify=false.
   * Allow building with S3 disabled again.
+  * Ported disk free space checking code to work on Solaris.
 
  -- Joey Hess <id@joeyh.name>  Thu, 01 Oct 2015 12:42:56 -0400
 
